[project]
name = "puncover"
description = "Analyses C/C++ build output for code size, static variables, and stack usage."
version = "0.6.0"
authors = [
    { name = "Hendrik Behrens", email = "hendrik.behrens@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.2.5",
    "jinja2==3.1.6",
    "werkzeug==3.0.6"
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]

[project.scripts]
puncover = "puncover.puncover:main"

[dependency-groups]
dev = [
    "codecov==2.1.13",
    "mock==4.0.3",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "tox==3.27.1; python_version < '3.12'",
    "tox==4.11.3; python_version >= '3.12'",
    "setuptools>=75",
    "ruff>=0.12.10",
]

[project.urls]
Homepage = "https://github.com/HBehrens/puncover"
Repository = "https://github.com/HBehrens/puncover"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
preview = true
line-length = 100

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = {"puncover"= ["puncover/templates/*", "puncover/static/*"]}
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["static", "templates", "examples", "images", "scripts", "tests"]
