[project]
name = "puncover"
description = "Analyses C/C++ build output for code size, static variables, and stack usage."
version = "0.7.1"
authors = [
    { name = "Hendrik Behrens", email = "hendrik.behrens@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.2.5",
    "jinja2==3.1.6",
    "pyelftools==0.32",
    "pyyaml==6.0.3",
    "werkzeug==3.0.6",
]
dynamic = ["classifiers"]

[project.scripts]
puncover = "puncover.puncover:main"

[dependency-groups]
dev = [
    "codecov==2.1.13",
    "mock==4.0.3",
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "tox==3.27.1; python_version < '3.12'",
    "tox==4.11.3; python_version >= '3.12'",
    "setuptools>=75",
    "ruff>=0.12.10",
]

[project.urls]
Homepage = "https://github.com/HBehrens/puncover"
Repository = "https://github.com/HBehrens/puncover"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
preview = true
line-length = 100

[build-system]
# use the poetry build backend, which enables automatic classifier generation
# see https://github.com/astral-sh/uv/issues/8716
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
packages = [{ include = "puncover" }]
include = [
    { path = "puncover/templates/**/*", format = ["wheel", "sdist"] },
    { path = "puncover/static/**/*", format = ["wheel", "sdist"] },
]
exclude = ["examples", "images", "scripts", "tests"]
